# disk-cleanup-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FILTER_RATIONALE.md  LICENSE  Makefile  README.md  TEMP_DIRECTORIES.md  TESTING.md  TUI_FEATURES.md
.github/: README.md
.github/workflows/: release.yml
.kiro/specs/disk-cleanup-tool/: design.md  requirements.md  tasks.md
scripts/: README.md  bump-version.sh  pre-release-check.sh  quick-release.sh  release.sh
src/: cli.rs  csv_handler.rs  deletion.rs  interactive.rs  main.rs  scan_ui.rs  scanner.rs  summary_ui.rs  utils.rs
