[package]
name = "disk-cleanup-tool"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
rayon = "1.10"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.28"
ratatui = "0.29"
thiserror = "1.0"
ctrlc = "3.4"

[dev-dependencies]
proptest = "1.5"
tempfile = "3.13"
